--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.9"
 bucketlist = {git = "https://github.com/ceumicrodata/bucketlist.git"}
 langdetect = "^1.0.9"
 pandas = "^2.2.0"
+unidecode = "^1.3.8"
 
 
 [build-system]
