--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ bucketlist = {git = "https://github.com/ceumicrodata/bucketlist.git"}
 langdetect = "^1.0.9"
 pandas = "^2.2.0"
 unidecode = "^1.3.8"
+tqdm = "^4.66.2"
 
 
 [build-system]
