--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ readme = "README.md"
 python = "^3.9"
 bucketlist = {git = "https://github.com/ceumicrodata/bucketlist.git"}
 langdetect = "^1.0.9"
-pandas = "^2.2.0"
 unidecode = "^1.3.8"
 tqdm = "^4.66.2"
+thefuzz = "^0.22.1"
 
 
 [build-system]
